--- a/index.html
+++ b/index.html
@@ -1,15 +1,236 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/css/main.css"  media="screen,projection"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
-  <body>
+    <link type="text/css" rel="stylesheet" href="/css/main.css" media="screen,projection" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Awesome landing page</title>
+</head>
 
-    
+<body>
+    <header>
+        <nav class="grey lighten-5">
+            <div class="container-wide">
+                <div class="nav-wrapper">
+                    <div class="row">
+                        <div class="s12">
+                            <img class="logo-img" src="/images/Logo-Dark.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <a class="black-text nav-links" href="#">Home</a>
+                            <a class="black-text nav-links" href="#">Features</a>
+                            <a class="black-text nav-links" href="#">About</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 l12">
+                            <p class="valign-wrapper nav-buttons"><a class="waves-effect waves-teal btn-flat">Sign in</a></p>
+                            <p class="valign-wrapper nav-buttons"><a class="waves-effect waves-light btn">Sign up</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div id="index-banner" class="parallax-container">
+            <div class="container-short">
+                <div class="row">
+                    <h1 class="header-title center">Awesome looks so good</h1>
+                    <h3 class="header-subtitle center">Awesome is the landing page you wish you had when you started</h3>
+                </div>
+                <div class="row play-button">
+                    <i class="fas fa-play-circle"></i>
+                </div>
+                <div class="row">
+                    <p class="header-p center">SIGN UP FOR A FREE 30 DAY TRIAL</p>
+                    <div class="input-field col s6 l6">
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col s6 l6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s6 l12">
+                        <p class="center-align"><a class="waves-effect waves-light btn">Start Free Trial</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="feature-section">
+        <div class="container">
+            <h5 class="center">Awesome is an amazing landing page brought to you on everyone's favorite learning
+                platform, Udemy. Imagine what is next.</h5>
+            <div class="row">
+                <div class="col s12 l4">
+                    <div class="row">
+                        <div class="col s12 m7 l12">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="/images/Couple.jpg">
+                                    <span class="card-title ">Mobile First, Always</span>
+                                </div>
+                                <div class="card-content">
+                                    <p>I am a very simple card. I am good at containing small bits of information.
+                                        I am convenient because I require little markup to use effectively.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="row">
+                        <div class="col s12 m7 l12">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="/images/Girlphone.jpg">
+                                    <span class="card-title">HTML5 and CSS3</span>
+                                </div>
+                                <div class="card-content">
+                                    <p>I am a very simple card. I am good at containing small bits of information.
+                                        I am convenient because I require little markup to use effectively.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="row">
+                        <div class="col s12 m7 l12">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="/images/Couple.jpg">
+                                    <span class="card-title">Social design</span>
+                                </div>
+                                <div class="card-content">
+                                    <p>I am a very simple card. I am good at containing small bits of information.
+                                        I am convenient because I require little markup to use effectively.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="showcase1-container grey lighten-3">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 center">
+                    <img class="showcase-img" src="/images/iphone_xs.png" alt="">
+                </div>
+                <div class="col l6 showcase1-wrapper">
+                    <h3 class="center-align showcase-text">Yes, it even looks good on an iPhone</h3>
+                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="showcase2-container">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 showcase2-wrapper">
+                    <h3 class="center-align showcase-text">How about iPad? Yup that too!</h3>
+                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="col l6 center">
+                    <img class="showcase-img" src="/images/ipad_pro.png" alt=""">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="call-to-action">
+        <div class="container">
+            <div class="col l12 center">
+                <h2 class="white-text">What are you waiting for?</h2>
+                <p class="white-text">Get started today and try for free - No credit card required</p>
+                <p class="valign-wrapper nav-buttons"><a class="waves-effect waves-light btn">Try today</a></p>
+            </div>
+        </div>
+    </section>
+    <section class="signup-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col l6">
+                    <div class="testimonial-wrapper">
+                        <h5>Hear what our fans have to say about awesome</h5>
+                        <p>"I learned how to build this website in an amazing online course on Udemy. I couldn't be happier!"
+                        <br>
+                        <br>
+                        <strong>-John Smith</strong>
+                        </p>
+                        
+                    </div>
+                </div>
+                <div class="col l6">
+                    <div class="form-wrapper">
+                        <div class="signup-form grey lighten-3 z-depth-2">
+                            <div class="center row">
+                                <div class="col l12">
+                                    <h6>SIGN UP FOR A FREE 30 DAY TRIAL</h6>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s6 l12">
+                                    <input id="first_name_2" type="text" class="validate">
+                                    <label for="first_name_2">First Name</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s6 l12">
+                                    <input id="last_name_2" type="text" class="validate">
+                                    <label for="last_name_2">Last Name</label>
+                                </div>
+                            </div>
+                            <div class="row center">
+                                <div class="col l12">
+                                    <a class="waves-effect waves-light btn">Try today</a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col l12">
+                                    <p class="form-policy">* We don't share your personal info with anyone. Check out our Privacy Policy for more information.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer-wrapper">
+        <div class="row center footer-social-wrapper">
+            <div class="col l4">
+                <i class="fab fa-instagram footer-icon"></i>
+            </div>
+            <div class="col l4">
+                <i class="fab fa-twitter-square footer-icon"></i>
+            </div>
+            <div class="col l4">
+                <i class="fab fa-facebook-square footer-icon"></i>
+            </div>
+        </div>
+        <div class="row center">
+            <div class="col l12">
+                <div class="footer-copyright">
+                    <img src="/images/Logo-Light.png" alt="">
+                    <p class="white-text">Copyright © 2018 Jesús Blanco.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script type="text/javascript" src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
-  </body>
+</body>
+
 </html>
