--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="/css/main.css" media="screen,projection" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome landing page</title>
@@ -14,22 +15,25 @@
         <nav class="grey lighten-5">
             <div class="container-wide">
                 <div class="nav-wrapper">
-                    <div class="row">
-                        <div class="s12">
+                    <div class="col s1 hide-on-med-and-up">
+                        <i id="toggle-sidebar" class="teal-text fas fa-ellipsis-v"></i>
+                    </div>
+                    <div class="row sm-logo-center">
+                        <div class="col s12 l12 center">
                             <img class="logo-img" src="/images/Logo-Dark.png" alt="">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s12 hide-on-small-only">
+                        <div class="col s12 l12 hide-on-small-only">
                             <a class="black-text nav-links" href="#">Home</a>
                             <a class="black-text nav-links" href="#">Features</a>
                             <a class="black-text nav-links" href="#">About</a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s12 l12">
-                            <p class="valign-wrapper nav-buttons"><a class="waves-effect waves-teal btn-flat">Sign in</a></p>
-                            <p class="valign-wrapper nav-buttons"><a class="waves-effect waves-light btn">Sign up</a></p>
+                        <div class="col s12 l12 hide-on-small-only">
+                            <a class="waves-effect waves-teal btn-flat">Sign in</a>
+                            <a class="waves-effect waves-light btn">Sign up</a>
                         </div>
                     </div>
                 </div>
@@ -48,12 +52,12 @@
                     <p class="header-p center">SIGN UP FOR A FREE 30 DAY TRIAL</p>
                     <div class="input-form-wrapper">
                         <div class="input-field col s12 l6">
-                                <input id="first_name" type="text" class="validate">
-                                <label for="first_name">First Name</label>
-                            </div>
-                            <div class="input-field col s12 l6">
-                                <input id="last_name" type="text" class="validate">
-                                <label for="last_name">Last Name</label>
+                            <input id="first_name" type="text" class="validate">
+                            <label for="first_name">First Name</label>
+                        </div>
+                        <div class="input-field col s12 l6">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Last Name</label>
                         </div>
                     </div>
                 </div>
@@ -65,11 +69,48 @@
             </div>
         </div>
     </header>
+    <div id="sidebar" class="sidebar grey lighten-5">
+        <div class="sidebar-wrapper">
+            <div class="sidebar-header teal">
+                <div class="row center">
+                    <div class="col s12">
+                        <img class="logo-img" src="/images/Logo-Light.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="sidebar-content">
+                <div class="row">
+                    <div class="col s12">
+                        <i class="fas fa-home sidebar-link"></i>
+                        <a class="sidebar-link" href="#">Home</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <i class="fab fa-buromobelexperte sidebar-link"></i>
+                        <a class="sidebar-link" href="#">Features</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <i class="fas fa-question-circle sidebar-link"></i>
+                        <a class="sidebar-link" href="#">About</a>
+                    </div>
+                </div>
+                <div class="row center">
+                    <div class="col s12">
+                        <a class="waves-effect waves-teal btn-flat">Sign in</a>
+                        <a class="waves-effect waves-light btn">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </div>      
+    </div>
     <section class="feature-section">
         <div class="container">
             <h5 class="center">Awesome is an amazing landing page brought to you on everyone's favorite learning
                 platform. Imagine what is next.</h5>
-            <div class="row">
+                <div class="row">
                 <div class="col s12 m4 l4">
                     <div class="card">
                         <div class="card-image">
@@ -77,7 +118,8 @@
                             <span class="card-title ">Mobile First, Always</span>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
                         </div>
                     </div>
                 </div>
@@ -99,7 +141,8 @@
                             <span class="card-title">Social design</span>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
                         </div>
                     </div>
                 </div>
@@ -114,9 +157,7 @@
                 </div>
                 <div class="col s12 l6 showcase1-wrapper">
                     <h3 class="center-align showcase-text">Yes, it even looks good on an iPhone</h3>
-                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
         </div>
@@ -126,9 +167,7 @@
             <div class="row">
                 <div class="col s12 l6 showcase2-wrapper">
                     <h3 class="center-align showcase-text">How about iPad? Yup that too!</h3>
-                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
                 <div class="col l6 center sm-absolute">
                     <img class="showcase-img" src="/images/ipad_pro.png" alt=""">
@@ -141,7 +180,7 @@
             <div class="col l12 center">
                 <h2 class="white-text">What are you waiting for?</h2>
                 <p class="white-text">Get started today and try for free - No credit card required</p>
-                <a class="waves-effect waves-light btn">Try today</a></p>
+                <a class="waves-effect waves-light btn">Try today</a>
             </div>
         </div>
     </section>
@@ -151,12 +190,13 @@
                 <div class="col s12 l6 center">
                     <div class="testimonial-wrapper">
                         <h5>Hear what our fans have to say about awesome</h5>
-                        <p>"I learned how to build this website in an amazing online course on Udemy. I couldn't be happier!"
-                        <br>
-                        <br>
-                        <strong>-John Smith</strong>
+                        <p>"I learned how to build this website in an amazing online course on Udemy. I couldn't be
+                            happier!"
+                            <br>
+                            <br>
+                            <strong>-John Smith</strong>
                         </p>
-                        
+
                     </div>
                 </div>
                 <div class="col s12 l6">
@@ -186,7 +226,8 @@
                             </div>
                             <div class="row">
                                 <div class="col s12 l12">
-                                    <p class="form-policy">* We don't share your personal info with anyone. Check out our Privacy Policy for more information.</p>
+                                    <p class="form-policy">* We don't share your personal info with anyone. Check out
+                                        our Privacy Policy for more information.</p>
                                 </div>
                             </div>
                         </div>
@@ -208,7 +249,7 @@
             </div>
         </div>
         <div class="row center">
-            <div class="col l12">
+            <div class="col s12 l12">
                 <div class="footer-copyright">
                     <img src="/images/Logo-Light.png" alt="">
                     <p class="white-text">Copyright © 2018 Jesús Blanco.</p>
@@ -216,6 +257,7 @@
             </div>
         </div>
     </footer>
+    <div id="sidebar-overlay"></div>
     <script type="text/javascript" src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
 </body>
