--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/css/main.css" media="screen,projection" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link type="text/css" rel="stylesheet" href="/css/main.css" media="screen,projection">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome landing page</title>
 </head>
 
@@ -104,20 +104,20 @@
                     </div>
                 </div>
             </div>
-        </div>      
+        </div>
     </div>
     <section class="feature-section">
         <div class="container">
             <h5 class="center">Awesome is an amazing landing page brought to you on everyone's favorite learning
                 platform. Imagine what is next.</h5>
-                <div class="row">
+            <div class="row">
                 <div class="col s12 m4 l4">
                     <div class="card">
                         <div class="card-image">
                             <img src="/images/Couple.jpg">
-                            <span class="card-title ">Mobile First, Always</span>
                         </div>
                         <div class="card-content">
+                            <span class="card-title ">Mobile First</span>
                             <p>I am a very simple card. I am good at containing small bits of information. I am
                                 convenient because I require little markup to use effectively.</p>
                         </div>
@@ -127,10 +127,11 @@
                     <div class="card">
                         <div class="card-image">
                             <img src="/images/Girlphone.jpg">
-                            <span class="card-title">HTML5 and CSS3</span>
                         </div>
                         <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                            <span class="card-title">HTML5 and CSS3</span>
+                            <p>I am a very simple card. I am good at containing small bits of information. I am
+                                convenient because I require little markup to use effectively.</p>
                         </div>
                     </div>
                 </div>
@@ -138,9 +139,9 @@
                     <div class="card">
                         <div class="card-image">
                             <img src="/images/Couple.jpg">
-                            <span class="card-title">Social design</span>
                         </div>
                         <div class="card-content">
+                            <span class="card-title">Social design</span>
                             <p>I am a very simple card. I am good at containing small bits of information. I am
                                 convenient because I require little markup to use effectively.</p>
                         </div>
@@ -152,12 +153,14 @@
     <section class="showcase-container grey lighten-3 sm-relative">
         <div class="container">
             <div class="row">
-                <div class="col l6 center sm-absolute">
+                <div class="col l6 center sm-absolute md-center-align">
                     <img class="showcase-img" src="/images/iphone_xs.png" alt="">
                 </div>
                 <div class="col s12 l6 showcase1-wrapper">
-                    <h3 class="center-align showcase-text">Yes, it even looks good on an iPhone</h3>
-                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h3 class="showcase-text">Yes, it even looks good on an iPhone</h3>
+                    <p class="showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
         </div>
@@ -166,10 +169,12 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 l6 showcase2-wrapper">
-                    <h3 class="center-align showcase-text">How about iPad? Yup that too!</h3>
-                    <p class="center-align showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h3 class="showcase-text">How about iPad? Yup that too!</h3>
+                    <p class="showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
-                <div class="col l6 center sm-absolute">
+                <div class="col l6 center sm-absolute md-center-align">
                     <img class="showcase-img" src="/images/ipad_pro.png" alt=""">
                 </div>
             </div>
