--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <section class="signup-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col s12 l6 center">
+                <div class="col s12 m6 l6 center">
                     <div class="testimonial-wrapper">
                         <h5>Hear what our fans have to say about awesome</h5>
                         <p>"I learned how to build this website in an amazing online course on Udemy. I couldn't be
@@ -204,7 +204,7 @@
 
                     </div>
                 </div>
-                <div class="col s12 l6">
+                <div class="col s12 m6 l6">
                     <div class="form-wrapper">
                         <div class="signup-form grey lighten-3 z-depth-2">
                             <div class="center row">
