added animations using sal.js library

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="/css/main.css" media="screen,projection">
+    <link rel="stylesheet" href="/node_modules/sal.js/dist/sal.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome landing page</title>
 </head>
@@ -40,7 +41,7 @@
             </div>
         </nav>
         <div id="index-banner" class="parallax-container">
-            <div class="container-short">
+            <div class="container-short" data-sal-duration="500" data-sal="slide-down" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                 <div class="row">
                     <h1 class="header-title center">Awesome looks so good</h1>
                     <h3 class="header-subtitle center">Awesome is the landing page you wish you had when you started</h3>
@@ -108,11 +109,11 @@
     </div>
     <section class="feature-section">
         <div class="container">
-            <h5 class="center">Awesome is an amazing landing page brought to you on everyone's favorite learning
+            <h5 class="center" data-sal-duration="500" data-sal="slide-down" data-sal-delay="700" data-sal-easing="ease-out-bounce">Awesome is an amazing landing page brought to you on everyone's favorite learning
                 platform. Imagine what is next.</h5>
             <div class="row">
                 <div class="col s12 m4 l4">
-                    <div class="card">
+                    <div class="card" data-sal-duration="500" data-sal="slide-left" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                         <div class="card-image">
                             <img src="/images/Couple.jpg">
                         </div>
@@ -124,7 +125,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
-                    <div class="card">
+                    <div class="card" data-sal-duration="500" data-sal="slide-down" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                         <div class="card-image">
                             <img src="/images/Girlphone.jpg">
                         </div>
@@ -136,7 +137,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
-                    <div class="card">
+                    <div class="card" data-sal-duration="500" data-sal="slide-right" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                         <div class="card-image">
                             <img src="/images/Couple.jpg">
                         </div>
@@ -153,10 +154,10 @@
     <section class="showcase-container grey lighten-3 sm-relative">
         <div class="container">
             <div class="row">
-                <div class="col l6 center sm-absolute md-center-align">
+                <div class="col l6 center sm-absolute md-center-align" data-sal-duration="1000" data-sal="slide-right" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <img class="showcase-img" src="/images/iphone_xs.png" alt="">
                 </div>
-                <div class="col s12 l6 showcase1-wrapper">
+                <div class="col s12 l6 showcase1-wrapper" data-sal-duration="1000" data-sal="slide-down" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <h3 class="showcase-text">Yes, it even looks good on an iPhone</h3>
                     <p class="showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                         do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -168,13 +169,13 @@
     <section class="showcase2-container sm-relative">
         <div class="container">
             <div class="row">
-                <div class="col s12 l6 showcase2-wrapper">
+                <div class="col s12 l6 showcase2-wrapper" data-sal-duration="1000" data-sal="slide-down" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <h3 class="showcase-text">How about iPad? Yup that too!</h3>
                     <p class="showcase-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                         do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                         nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
-                <div class="col l6 center sm-absolute md-center-align">
+                <div class="col l6 center sm-absolute md-center-align" data-sal-duration="1000" data-sal="slide-left" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <img class="showcase-img" src="/images/ipad_pro.png" alt=""">
                 </div>
             </div>
@@ -182,7 +183,7 @@
     </section>
     <section class="call-to-action">
         <div class="container">
-            <div class="col l12 center">
+            <div class="col l12 center" data-sal-duration="1000" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                 <h2 class="white-text">What are you waiting for?</h2>
                 <p class="white-text">Get started today and try for free - No credit card required</p>
                 <a class="waves-effect waves-light btn">Try today</a>
@@ -192,7 +193,7 @@
     <section class="signup-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col s12 m6 l6 center">
+                <div class="col s12 m6 l6 center" data-sal-duration="1000" data-sal="slide-right" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <div class="testimonial-wrapper">
                         <h5>Hear what our fans have to say about awesome</h5>
                         <p>"I learned how to build this website in an amazing online course on Udemy. I couldn't be
@@ -204,7 +205,7 @@
 
                     </div>
                 </div>
-                <div class="col s12 m6 l6">
+                <div class="col s12 m6 l6" data-sal-duration="1000" data-sal="slide-left" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <div class="form-wrapper">
                         <div class="signup-form grey lighten-3 z-depth-2">
                             <div class="center row">
@@ -226,7 +227,7 @@
                             </div>
                             <div class="row center">
                                 <div class="col s12 l12">
-                                    <a class="waves-effect waves-light btn">Try today</a>
+                                    <a class="waves-effect waves-light btn">Start Free Trial</a>
                                 </div>
                             </div>
                             <div class="row">
@@ -242,7 +243,7 @@
         </div>
     </section>
     <footer class="footer-wrapper">
-        <div class="row center footer-social-wrapper">
+        <div class="row center footer-social-wrapper" data-sal-duration="1000" data-sal="fade" data-sal-delay="300" data-sal-easing="ease-out-bounce">
             <div class="col s4 l4">
                 <i class="fab fa-instagram footer-icon"></i>
             </div>
@@ -265,6 +266,11 @@
     <div id="sidebar-overlay"></div>
     <script type="text/javascript" src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
+    <script src="/node_modules/sal.js/dist/sal.js"></script>
+    <script>sal({
+        threshold: 0.9,
+        once: false,
+      });</script>
 </body>
 
 </html>
