index.php for heroku deploy

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
     <script type="text/javascript" src="/js/index.js"></script>
     <script src="/node_modules/sal.js/dist/sal.js"></script>
     <script>sal({
-        threshold: 0.9,
-        once: false,
+        threshold: 0.5,
+        once: true,
       });</script>
 </body>
 
